--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
         }
 
         body {
+            padding-top: 10px;
             text-align: center;
+        }
+
+        .note {
+            font-size: 12px;
+            color: #aaa;
         }
 
         .line {
@@ -55,6 +61,8 @@
 
     </div>
 
+    <div class="note">（先预览后下载）</div>
+
     <div class="line">
         <canvas id="myCanvas" width="300" height="300">
             如果你的页面展示了这句话，说明你的浏览器不支持canvas
@@ -62,8 +70,9 @@
     </div>
 
     <div>
-        <i class="icon-tupian"></i>
+        <!-- <i class="icon-tupian"></i> -->
         <a id="download" href="">下载</a>
+        <span class="button" onclick="clipboard()">复制到剪切板</span>
     </div>
 
     <script>
@@ -79,9 +88,11 @@
         // Q: 绘制图片时，如何处理image onload事件异步的问题（我需要在图片绘制完毕之后才能将canvas导出成下载链接放到a标签上）
         // A: 剥离异步操作，在 image onload 完毕后再调用 draw 方法，而不是在 draw 方法里面去加载图片（懒得用Promise）
 
-        // Q: 如何修改图片质量（压缩或增大）
-        // A: toDataURL 的第二个参数
+        // Q: Failed to construct 'ClipboardItem': Failed to convert value to 'Blob'.
+        // A: https://stackoverflow.com/questions/63561767/typeerror-failed-to-construct-clipboarditem-failed-to-convert-value-to-blob?newreg=6aa69267fb374f27aade256acaa0cfaf
 
+        // Q: 如何修改图片质量（压缩或增大）
+        // A: TODO: toDataURL 的第二个参数？？？
 
 
         // 非必要，元素ID会自动在全局（window）下生成同名变量，无需再获取DOM
@@ -106,6 +117,7 @@
         var pictureName = 'GImage'
         var options = ['png', 'jpg', 'jpeg']
         var optionIndex = 0;
+        var suffix = options[optionIndex]
 
         // 保存用于绘制的图片
         var image = null;
@@ -127,7 +139,6 @@
         }
 
         fileDom.onchange = function() {
-            console.log(fileDom.files)
             const file = fileDom.files[0];
             if (!file) {
                 return;
@@ -153,8 +164,19 @@
             window[field] = Number(value);
         }
 
+        // 清空画布
         function clear() {
             ctx.clearRect(0, 0, width, height)
+        }
+
+        // 获取图片后缀
+        function getSuffix() {
+            return options[optionIndex];
+        }
+
+        // 生成图片类型
+        function getImageType() {
+            return `image/${getSuffix()}`;
         }
 
         // 绘制图片
@@ -187,7 +209,7 @@
             }
 
             // 生成图片
-            var suffix = options[optionIndex];
+            var suffix = getSuffix();
             downloadDom.href = canvas.toDataURL(`image/${suffix}`);
             downloadDom.download = `${pictureName}.${suffix}`
         }
@@ -198,11 +220,27 @@
             draw();
         }
 
+        // 清除图片
         function deleteImage() {
             if (image) {
                 image = null;
                 draw()
             }
+        }
+
+        // 复制图片到剪切板
+        function clipboard() {
+            navigator.permissions.query({ name: 'clipboard-write' }).then(result => {
+                if (result.state === 'granted') {
+                    var imageType = getImageType();
+                    canvas.toBlob(function deal(blob) {
+                        var clipboardItem = new ClipboardItem({[`image/${suffix}`]: blob});
+                        navigator.clipboard.write([clipboardItem]).then(() => {
+                            alert('复制成功');
+                        });
+                    }, imageType);
+                }
+            });
         }
 
         // 初始化图片后缀列表
