--- a/index.html
+++ b/index.html
@@ -5,34 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GImage - 按需生成图片</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            padding-top: 10px;
-            text-align: center;
-        }
-
-        .note {
-            font-size: 12px;
-            color: #aaa;
-        }
-
-        .line {
-            margin-bottom: 8px;
-        }
-
-        .button {
-            cursor: pointer;
-        }
-
-        #file {
-            display: none;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="./index.css" />
 </head>
 <body>
     <div class="line">
@@ -90,6 +63,9 @@
 
         // Q: Failed to construct 'ClipboardItem': Failed to convert value to 'Blob'.
         // A: https://stackoverflow.com/questions/63561767/typeerror-failed-to-construct-clipboarditem-failed-to-convert-value-to-blob?newreg=6aa69267fb374f27aade256acaa0cfaf
+
+        // Q: 如何实现同时下载多文件
+        // A: TODO:
 
         // Q: 如何修改图片质量（压缩或增大）
         // A: TODO: toDataURL 的第二个参数？？？
@@ -208,7 +184,7 @@
                 }
             }
 
-            // 生成图片
+            // 生成图片（单图下载）
             var suffix = getSuffix();
             downloadDom.href = canvas.toDataURL(`image/${suffix}`);
             downloadDom.download = `${pictureName}.${suffix}`
