perf: 默认添加水印

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <select id="suffix"></select>
         <label for="color">颜色</label>
         <input id="color" type="color" />
-        <input id="watermark" type="checkbox" />
+        <input id="watermark" type="checkbox" checked />
         <label for="watermark" >水印</label>
     </div>
 
