--- a/index.html
+++ b/index.html
@@ -241,6 +241,36 @@
         }
 
         init()
+
+
+
+
+
+        function sleep(d){
+            for(var t = Date.now();Date.now() - t <= d;);
+        }
+
+
+        function download(src) {
+            var $a = document.createElement('a');
+            $a.setAttribute("href", src);
+            $a.setAttribute("download", "");
+
+            var evObj = document.createEvent('MouseEvents');
+            evObj.initMouseEvent( 'click', true, true, window, 0, 0, 0, 0, 0, false, false, true, false, 0, null);
+            $a.dispatchEvent(evObj);
+        };
+
+
+        for(var i = 0; i < 3; i++){
+            sleep(500);
+            const src = canvas.toDataURL(`image/${suffix}`);
+            download(src);
+
+        }
+
+
+
     </script>
 </body>
 </html>
