--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
         <span class="button" onclick="clipboard()">复制到剪切板</span>
     </div>
 
+    <div>
+        同时下载 <input id="count" type="number" value="3" /> 张图片
+        <span class="button" onclick="batchDownload()">批量下载</span>
+    </div>
+
     <script>
         // Q: 如何实现图片下载
         // A: 使用a标签加download属性实现下载
@@ -80,6 +85,7 @@
         var watermarkDom = document.getElementById('watermark')
         var fileDom = document.getElementById('file')
         var downloadDom = document.getElementById('download')
+        var countDom = document.getElementById('count')
 
         var canvas = document.getElementById('myCanvas')
         var ctx = canvas.getContext('2d');
@@ -219,6 +225,37 @@
             });
         }
 
+        // 下载
+        function download(src) {
+            var $a = document.createElement('a');
+            $a.setAttribute("href", src);
+            $a.setAttribute("download", `${pictureName}.${suffix}`);
+
+            var evObj = document.createEvent('MouseEvents');
+            evObj.initMouseEvent( 'click', true, true, window, 0, 0, 0, 0, 0, false, false, true, false, 0, null);
+            $a.dispatchEvent(evObj);
+        };
+
+        // 批量下载
+        function batchDownload() {
+            if (isDownloading) {
+                return;
+            }
+            var isDownloading = true;
+            var i = 0;
+            var batchTimer = setInterval(() => {
+                i++;
+                console.log(i);
+                if (i > countDom.value) {
+                    clearInterval(batchTimer);
+                    isDownloading = false;
+                    return;
+                }
+                const src = canvas.toDataURL(`image/${suffix}`);
+                download(src);
+            }, 500)
+        }
+
         // 初始化图片后缀列表
         function initOptions() {
             var html = '';
@@ -241,36 +278,6 @@
         }
 
         init()
-
-
-
-
-
-        function sleep(d){
-            for(var t = Date.now();Date.now() - t <= d;);
-        }
-
-
-        function download(src) {
-            var $a = document.createElement('a');
-            $a.setAttribute("href", src);
-            $a.setAttribute("download", "");
-
-            var evObj = document.createEvent('MouseEvents');
-            evObj.initMouseEvent( 'click', true, true, window, 0, 0, 0, 0, 0, false, false, true, false, 0, null);
-            $a.dispatchEvent(evObj);
-        };
-
-
-        for(var i = 0; i < 3; i++){
-            sleep(500);
-            const src = canvas.toDataURL(`image/${suffix}`);
-            download(src);
-
-        }
-
-
-
     </script>
 </body>
 </html>
