--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         <span class="button" onclick="batchDownload()">批量下载</span>
     </div>
 
+    <a href="https://github.com/AWhiteMouse/GImage" title="前往GitHub" target="_blank" class="link">
+        <img src="https://github.githubassets.com/favicons/favicon.png" />
+    </a>
+
     <script>
         // Q: 如何实现图片下载
         // A: 使用a标签加download属性实现下载
