--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div>
         <!-- <i class="icon-tupian"></i> -->
-        <a id="download" href="">下载</a>
+        <a id="download" href="" class="button">下载</a>
         <span class="button" onclick="clipboard()">复制到剪切板</span>
     </div>
 
