--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input id="height" type="number" min="10" max="500" value="300" placeholder="请输入数字" />
         <label for="suffix">格式</label>
         <select id="suffix"></select>
-        <label for="color">颜色</label>
+        <label for="color">背景色</label>
         <input id="color" type="color" />
         <input id="watermark" type="checkbox" checked />
         <label for="watermark" >水印</label>
