feat: 引入百度统计

--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
         <img src="https://github.githubassets.com/favicons/favicon.png" />
     </a>
 
+    <!-- 百度统计 -->
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?a3331d83a1e4cdadda0d8b0ead506b27";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
     <script>
         // Q: 如何实现图片下载
         // A: 使用a标签加download属性实现下载
