--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <body>
     <div class="line flex-center">
         <label for="width">宽</label>
-        <input id="width" type="number" class="number" min="10" max="500" value="300" placeholder="请输入数字" />
+        <input id="width" type="number" min="10" max="500" value="300" placeholder="请输入数字" />
         <label for="height">高</label>
-        <input id="height" type="number" class="number" min="10" max="500" value="300" placeholder="请输入数字" />
+        <input id="height" type="number" min="10" max="500" value="300" placeholder="请输入数字" />
         <label for="suffix">生成图片格式</label>
         <select id="suffix"></select>
         <label for="color">背景色</label>
@@ -39,10 +39,7 @@
     </div>
 
     <div class="line">
-        <!-- <span> -->
-            <span id="preview" class="button" onclick="preview()">预览</span>
-        <!-- </span> -->
-
+        <span id="preview" class="button" onclick="preview()">预览</span>
     </div>
 
     <div class="line">
