--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
         <img src="https://github.githubassets.com/favicons/favicon.png" />
     </a>
 
+    <!-- <div id="reserve" class="button">颜色反转</div> -->
+
     <script>
         // Q: 如何实现图片下载
         // A: 使用a标签加download属性实现下载
@@ -154,6 +156,16 @@
             }
         }
 
+        // reserve.onclick = function() {
+        //     const imgData = ctx.getImageData(0, 0, canvas.width, canvas.height)
+        //     for (var i = 0; i < imgData.data.length; i += 4) {
+        //         imgData.data[i] = imgData.data[i] ^ 255; // Invert Red
+        //         imgData.data[i+1] = imgData.data[i+1] ^ 255; // Invert Green
+        //         imgData.data[i+2] = imgData.data[i+2] ^ 255; // Invert Blue
+        //     }
+        //     ctx.putImageData(imgData, 0, 0)
+        // }
+
         function reset(field, value) {
             window[field] = Number(value);
         }
@@ -205,7 +217,7 @@
             // 生成图片（单图下载）
             var suffix = getSuffix();
             downloadDom.href = canvas.toDataURL(`image/${suffix}`);
-            downloadDom.download = `${pictureName}.${suffix}`
+            downloadDom.download = `${pictureName} - ${width}*${height}.${suffix}`
         }
 
         // 图片预览
